@@ -2,70 +2,78 @@ package org.pollub.campusmate.addressbookentry.web;
 
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.pollub.campusmate.addressbookentry.dto.AddressBookEntryCreationDto;
 import org.pollub.campusmate.addressbookentry.dto.AddressBookEntryDto;
+import org.pollub.campusmate.addressbookentry.mapper.AddressBookEntryCreationMapper;
+import org.pollub.campusmate.addressbookentry.mapper.AddressBookEntryMapper;
 import org.pollub.campusmate.addressbookentry.service.AddressBookEntryService;
-import org.pollub.campusmate.addressbookentry.entity.AddressBookEntry;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @AllArgsConstructor
 @RequestMapping("/api/addressBook/entries")
 public class AddressBookEntryController {
 
-    private final ModelMapper modelMapper;
-    AddressBookEntryService addressBookEntryService;
+    private final AddressBookEntryMapper addressBookEntryMapper;
+    private final AddressBookEntryCreationMapper addressBookEntryCreationMapper;
+    private final AddressBookEntryService addressBookEntryService;
 
     @GetMapping("/{addressBookEntryId}")
     public ResponseEntity<AddressBookEntryDto> getAddressBookEntryById(@PathVariable long addressBookEntryId) {
-        AddressBookEntry addressBookEntry = addressBookEntryService.getAddressBookEntryById(addressBookEntryId);
-        AddressBookEntryDto addressBookEntryDTO = modelMapper.map(addressBookEntry, AddressBookEntryDto.class);
-        return new ResponseEntity<>(addressBookEntryDTO, HttpStatus.OK);
+        var addressBookEntry = addressBookEntryService.getAddressBookEntryById(addressBookEntryId);
+        var addressBookEntryDto = addressBookEntryMapper.toDto(addressBookEntry);
+        return new ResponseEntity<>(addressBookEntryDto, HttpStatus.OK);
     }
 
-    @GetMapping("/{contactName}")
-    public ResponseEntity<AddressBookEntryDto> getAddressBookEntryByContactName(@PathVariable String contactName) {
-        AddressBookEntry addressBookEntry = addressBookEntryService.getAddressBookEntryByContactName(contactName);
-        AddressBookEntryDto addressBookEntryDTO = modelMapper.map(addressBookEntry, AddressBookEntryDto.class);
-        return new ResponseEntity<>(addressBookEntryDTO, HttpStatus.OK);
+    @GetMapping("/search/{contactName}")
+    public ResponseEntity<List<AddressBookEntryDto>> searchAddressBookEntries(@PathVariable String contactName) {
+        var entries = addressBookEntryService.searchAddressBookEntriesByContactName(contactName);
+        var entriesDto = entries.stream()
+                .map(addressBookEntryMapper::toDto)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(entriesDto);
     }
 
     @PostMapping
-    public ResponseEntity<String> createAddressBookEntry(@Valid @RequestBody AddressBookEntryCreationDto addressBookEntryDTO, BindingResult bindingResult) {
-        if(bindingResult.hasErrors()) {
-            StringBuilder errorMessage = new StringBuilder();
-            bindingResult.getAllErrors().forEach(error -> errorMessage.append(error.getDefaultMessage()).append("\n"));
-            return new ResponseEntity<>(errorMessage.toString(), HttpStatus.BAD_REQUEST);
+    public ResponseEntity<String> createAddressBookEntry(
+            @Valid @RequestBody AddressBookEntryCreationDto addressBookEntryCreationDto,
+            BindingResult bindingResult) {
+        if (bindingResult.hasErrors()) {
+            String errorMessage = bindingResult.getAllErrors().stream()
+                    .map(error -> error.getDefaultMessage() + "\n")
+                    .collect(Collectors.joining());
+            return new ResponseEntity<>(errorMessage, HttpStatus.BAD_REQUEST);
         }
-        AddressBookEntry addressBookEntry = modelMapper.map(addressBookEntryDTO, AddressBookEntry.class);
+        var addressBookEntry = addressBookEntryCreationMapper.toEntity(addressBookEntryCreationDto);
         addressBookEntryService.saveAddressBookEntry(addressBookEntry);
-        return new ResponseEntity<>("Entry created successfully",HttpStatus.CREATED);
+        return new ResponseEntity<>("Entry created successfully", HttpStatus.CREATED);
     }
-
-    //TODO: Add entry with userId
 
     @DeleteMapping("/{addressBookEntryId}")
     public ResponseEntity<String> deleteAddressBookEntry(@PathVariable long addressBookEntryId) {
         addressBookEntryService.deleteAddressBookEntry(addressBookEntryId);
-        return new ResponseEntity<>("Entry deleted successfully",HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>("Entry deleted successfully", HttpStatus.NO_CONTENT);
     }
 
-    @PutMapping("/{addressBookEntryId}")
-    public ResponseEntity<String> updateAddressBookEntry(@PathVariable long addressBookEntryId, @RequestBody AddressBookEntryCreationDto addressBookEntryDTO) {
-        AddressBookEntry addressBookEntry = modelMapper.map(addressBookEntryDTO, AddressBookEntry.class);
-        addressBookEntryService.updateAddressBookEntry(addressBookEntryId, addressBookEntry);
-        return new ResponseEntity<>("Entry updated successfully",HttpStatus.OK);
+    @PatchMapping("/{addressBookEntryId}")
+    public ResponseEntity<String> updateAddressBookEntry(
+            @PathVariable long addressBookEntryId,
+            @RequestBody AddressBookEntryDto addressBookEntryDto) {
+        addressBookEntryService.updateAddressBookEntry(addressBookEntryId, addressBookEntryDto);
+        return new ResponseEntity<>("Entry updated successfully", HttpStatus.OK);
     }
 
     @GetMapping("/all")
     public ResponseEntity<List<AddressBookEntryDto>> getAllAddressBookEntries() {
-        return new ResponseEntity<>(addressBookEntryService.getAllAddressBookEntries().stream()
-                .map(addressBookEntry -> modelMapper.map(addressBookEntry, AddressBookEntryDto.class)).toList(), HttpStatus.OK);
+        var entries = addressBookEntryService.getAllAddressBookEntries().stream()
+                .map(addressBookEntryMapper::toDto)
+                .collect(Collectors.toList());
+        return new ResponseEntity<>(entries, HttpStatus.OK);
     }
 }
